[package]
name = "mbedtls-src"
version = "0.0.0+3.0.0p1"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/npmccallum/mbedtls-src"
description = """
Source of mbedtls and logic to build it.
"""

[workspace]
members = ['testcrate']

[dependencies]
cc = "1.0"
